; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_bgconn.c_btm_suspend_wl_activity.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_bgconn.c_btm_suspend_wl_activity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTM_BLE_WL_INIT = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@BTM_BLE_WL_SCAN = common dso_local global i32 0, align 4
@BTM_BLE_WL_ADV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @btm_suspend_wl_activity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btm_suspend_wl_activity(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @BTM_BLE_WL_INIT, align 4
  %5 = and i32 %3, %4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @FALSE, align 4
  %9 = call i32 @btm_ble_start_auto_conn(i32 %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @BTM_BLE_WL_SCAN, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load i32, i32* @FALSE, align 4
  %17 = call i32 @btm_ble_start_select_conn(i32 %16, i32* null)
  br label %18

18:                                               ; preds = %15, %10
  %19 = load i32, i32* %2, align 4
  %20 = load i32, i32* @BTM_BLE_WL_ADV, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = call i32 (...) @btm_ble_stop_adv()
  br label %25

25:                                               ; preds = %23, %18
  ret void
}

declare dso_local i32 @btm_ble_start_auto_conn(i32) #1

declare dso_local i32 @btm_ble_start_select_conn(i32, i32*) #1

declare dso_local i32 @btm_ble_stop_adv(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
